episodes/119/manifests/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-users
  labels:
    app: nginx-users
spec:
  containers:
    - name: nginx
      image: bitnami/nginx:latest
      #      securityContext:
      #        runAsUser: 250
